Fix label alignment with checkboxes in designview v2 (#604)

--- a/frontend/app/less/branding/checkbox.less
+++ b/frontend/app/less/branding/checkbox.less
@@ -36,15 +36,15 @@
   .checkbox-box-wrapper {
     display: table-cell;
     width: 10px;
-    vertical-align: top;
+    vertical-align: middle;
   }
 
-  label {
+  .checkbox-label {
     cursor: pointer; // Due to React issue https://github.com/facebook/react/issues/134
     display: table-cell;
-    margin-bottom: 13px;
-    margin-left: 10px;
-    margin-top: 0;
     line-height: 16px;
+    margin-bottom: 13px;
+    margin-top: 0;
+    padding-left: 5px;
   }
 }
