--- a/frontend/app/less/signview/base.less
+++ b/frontend/app/less/signview/base.less
@@ -344,12 +344,14 @@ textarea {
     border: none;
     width: @dim;
     height: @dim;
-    margin-right: 7px;
     border: 2px solid @color;
     position: relative;
-    top: 2px;
   }
 
+  .checkbox-box-wrapper {
+    vertical-align: top;
+    top: 2px;
+  }
   .checkmark {
     @url: %("/colored_image?file=valid-input-checkbox.png&color=%D", #FFFFFF);
     width: @dim;
